--- a/fullstack-web3/project/backend/package.json
+++ b/fullstack-web3/project/backend/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "create-express-boilerplate",
+    "name": "webaverse-test-task",
     "version": "3.4.1",
-    "description": "basic setup for node api, using express js",
+    "description": "Coin",
     "main": "index.js",
     "scripts": {
         "start": "nodemon server.js"
@@ -16,6 +16,7 @@
     ],
     "license": "ISC",
     "dependencies": {
+        "axios": "^0.27.2",
         "commander": "^9.4.0",
         "cors": "^2.8.5",
         "dotenv": "^8.6.0",
@@ -40,10 +41,10 @@
         "create-express-boilerplate": "bin/installer.js"
     },
     "devDependencies": {
+        "husky": "^8.0.0",
         "jest": "^27.2.5",
         "nodemon": "^2.0.13",
-        "supertest": "^6.1.6",
-        "husky": "^8.0.0"
+        "supertest": "^6.1.6"
     },
     "prettier": {
         "trailingComma": "none",
